--- a/views/list.ejs
+++ b/views/list.ejs
@@ -3,7 +3,7 @@
         <title>Photos</title>
     </head>
     <body>
-        <H2>Showing <%= photos.length %> document(s)</H2>
+        <H2>Showing <%= photos.length %> photo(s)</H2>
         
         	<ol>
 	            <% for (i in photos) { %>
